tests/errors/function_assignment_requires_ref.dang
type DeferredCondition {
  let condition: Boolean! { true }

  new(&condition: Boolean!) {
    self.condition = condition
    self
  }
}

pub deferred = DeferredCondition { true }
